# ebml-iterable

./: Cargo.toml  README.md
.github/workflows/: github-pr-checks.yaml
specification/: Cargo.toml
specification-derive/: Cargo.toml
specification-derive/src/: ast.rs  attr.rs  derive.rs  easy_ebml.rs  lib.rs  pathing.rs
specification/src/: empty_spec.rs  lib.rs
src/: errors.rs  lib.rs  nonblocking.rs  spec_util.rs  specs.rs  tag_iterator.rs  tag_iterator_async.rs  tag_iterator_util.rs  tag_writer.rs  tags.rs  tools.rs
tests/: corrupt_data_tests.rs  derive_spec_compile.rs  derive_spec_compile_with_hierarchy.rs  spec_write_read.rs  test_spec.rs
