[package]
name = "ebml-iterable"
version = "0.5.0"
authors = ["Austin Blake <austinl3roy@gmail.com>"]
edition = "2018"
description = "This crate provides an iterator over EBML encoded data.  The items provided by the iterator are Tags as defined in EBML.  The iterator is spec-agnostic and requires a specification implementing specific traits to read files.  Typically, you would only use this crate to implement a custom specification - most often you would prefer a crate providing an existing specification, like `webm-iterable`."
readme = "README.md"
license = "MIT"
keywords = ["ebml", "encoding", "parser", "serialization"]
categories = ["parsing", "data-structures", "encoding", "multimedia::encoding"]
homepage = "https://github.com/austinleroy/ebml-iterable"
repository = "https://github.com/austinleroy/ebml-iterable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebml-iterable-specification = { version = "=0.4.0", path = "specification" }
ebml-iterable-specification-derive = { version = "=0.4.0", path = "specification-derive", optional = true }
futures = "0.3.21"

[features]
derive-spec = ["ebml-iterable-specification-derive"]
