[package]
name = "ebml-iterable-specification-derive"
version = "0.3.0"
authors = ["Austin Blake <austinl3roy@gmail.com>"]
edition = "2018"
description = "Provides macros for implementing `EbmlSpecification` for the `ebml-iterable` crate."
license = "MIT"
homepage = "https://github.com/austinleroy/ebml-iterable"
repository = "https://github.com/austinleroy/ebml-iterable"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
ebml-iterable-specification = { version = "=0.3.0", path = "../specification" }