[package]
name = "ebml-iterable-specification"
version = "0.2.0"
authors = ["Austin Blake <austinl3roy@gmail.com>"]
edition = "2018"
description = "Provides the base `EbmlSpecification` used by the `ebml-iterable` and `ebml-iterable-specification-derive` crates."
license = "MIT"
homepage = "https://github.com/austinleroy/ebml-iterable"
repository = "https://github.com/austinleroy/ebml-iterable"

[dependencies]